
NEW FUNCTIONS:
  * pitchSmoothPraat(): smoothes pitch contours with the same algorithm and "bandwidth" parameter as in Praat for improved compatibility
  * getPrior(): extract and/or plot the prior used for adjusting the certainty in pitch estimates in analyze()

MINOR:
  * soundgen_app(): improved tips
  * spectrogram(): option to plot frequencies on a logarithmic scale (yScale = 'log')
  * ssm(), spectrogram(), modulationSpectrum(), analyze(): standardized specification of "colorTheme"
  * analyze(): more flexible "cutFreq" defaults
  * analyze(): priorPlot deprecated


          CHANGES IN SOUNDGEN VERSION 1.5.0 [11-September-2019]
NEW FUNCTIONS:
  * pitch_app(): an interactive Shiny app for manually editing intonation (pitch) contours in a web browser

Affect back-compatibility:
  * analyze(): priorMean is now in Hz instead of semitones (but priorSD is still in semitones), priorPlot looks nicer
  * analyze(): interpolWin and cepSmooth are now in Hz instead of bins
  * analyze(): snakeStep, interpolWin, and smooth are set to 0 instead of NULL to turn off these types of pitch postprocessing

MINOR:
  * analyze(): set nFormants = 0 to skip formant analysis, SPL_measured = NULL to skip loudness analysis
  * analyze(): minor changes / debugging in pathfinding algorithms
  * playme(): supports playing a selected time region (from/to) and mp3 format
  * spectrogram(): accepts additional base graphical parameters, such as "yaxp" to control the number of tick marks; a new argument "grid" can be added to add grid lines


          CHANGES IN SOUNDGEN VERSION 1.4.1 [05-July-2019]
NEW FUNCTIONS:
  * flatSpectrum(): flattens the spectrum of a sound by smoothing in the frequency domain
  * transplantFormants(): takes the general spectral envelope (formants) of one sound and "transplants" it onto another sound

MINOR: